--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,7 @@ main {
 
 header {
   width: 100%;
-  padding: 35px;
+  padding: 35px 35px 5px 35px;
 }
 
 .header__company {
@@ -85,6 +85,7 @@ header {
 }
 
 .header__company h1 {
+  cursor: pointer;
   font-size: 3.8rem;
   font-weight: bold;
   color: hsl(10, 0%,  90%);
@@ -170,7 +171,7 @@ header {
 
 .app__order-data h2 {
   font-size: 3rem;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   padding: 15px 50px;
   background-color: var(--dark-color);
   color: white;
