--- a/styles/pdf-styles.css
+++ b/styles/pdf-styles.css
@@ -29,8 +29,9 @@ main {
  }
 
  
- .disarmed-pdf-section ul {
+ .disarmed-pdf-section ol {
    list-style: none;
+   page-break-inside: avoid;
  }
  
  .orders-pdf-section {
@@ -42,22 +43,23 @@ main {
    display: flex;
    flex-direction: column;
    gap: 1mm;
-   margin: .5cm;
+   margin: 5px;
+}
+
+.orders-pdf-section ol {
    page-break-inside: avoid;
- }
- 
- .orders-pdf-section ol {
    display: block;
    position: relative;
-   list-style: none;
+   list-style: disc;
  }
  
  .orders-pdf-section ol > li {
-   margin: .2mm 0;
+   margin: 5px 0;
  } 
  
  .assemble-pdf-section {
    page-break-before: always;
+   list-style-position: inside;
    list-style: none;
    display: grid;
    grid-template-columns: 1fr 1fr;
@@ -65,7 +67,7 @@ main {
 }
 
 .assemble-pdf-section li {
-   margin: 2px 10px;
+   margin: 2px 15px;
 } 
 
  .bold {
