--- a/styles/pdf-styles.css
+++ b/styles/pdf-styles.css
@@ -14,7 +14,7 @@ main {
  }
  
  .disarmed-pdf-section {
-    page-break-before: always;
+    page-break-inside: avoid;
    display: flex;
    gap: 2cm;
    font-size: 1.2rem;
