fix bug of summary section with trash icon and p tag position

--- a/styles/style.css
+++ b/styles/style.css
@@ -247,7 +247,7 @@ abbr.listed-product {
   width: 23px;
   aspect-ratio: 1 / 1;
   top: 50%;
-  left: 90%;
+  left: 100%;
   transform: translateY(-50%);
   cursor: pointer;
   background-image: url('../assets/trash-icon.svg');
@@ -349,6 +349,7 @@ abbr[title]:focus::after {
   position: relative;
   width: 92%;
   font-size: 1.2rem;
+  word-break: break-word;
 }
 
 .orders-summary-list li > p > span {
