--- a/styles/style.css
+++ b/styles/style.css
@@ -212,7 +212,7 @@ abbr.listed-product {
   max-width: 335px;
   border-radius: 20px;
   padding: 20px;
-  gap: 30px;
+  gap: 20px;
   background-color: var(--gray);
 }
 
@@ -259,6 +259,19 @@ abbr.listed-product {
 
 .summary button {
   align-self: center;
+}
+
+.summary label {
+  font-size: 1.2rem;
+  font-family: var(--secondary-font);
+}
+
+.summary textarea {
+  outline: none;
+  border-radius: 20px;
+  padding: 15px 10px;
+  resize: vertical;
+  height: 80px;
 }
 
 abbr[title] {
